[tool.poetry]
authors = ["zeptofine <zeptofine@gmail.com>"]
description = ""
name = "dataset-creator"
packages = [
  {include = "imdataset_creator"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
ImageHash = "^4.3.1"
Pillow = "^10.0.1"
PySide6-Essentials = "^6.5.2"
ffmpeg-python = "^0.2.0"
imagesize = "^1.4.1"
numpy = "^1.26.0"
opencv-python = "^4.8.1.78"
polars = "^0.19.3"
pyarrow = "^13.0.0"
python = "^3.10, <3.12"
python-dateutil = "^2.8.2"
rich = "^13.5.3"
typer = "^0.9.0"
wcmatch = "^8.5"
pathvalidate = "^3.2.0"

[tool.poetry.scripts]
imdataset-creator = "imdataset_creator.__main__:app"
imdataset-creator-gui = "imdataset_creator.gui.__main__:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
extend-ignore = ["F401", "E501", "B905"]
extend-select = [
  "A",
  "ASYNC",
  "UP",
  "I",
  "B",
  "ICN",
  "F",
  "RET",
  "SIM",
  "NPY",
  "PERF",
  "RUF",
  "PIE",
  "C4",
  "E", # pycodestyle
  "W", # pycodestyle
  "FA", # flake8-future-annotations
  "ISC", # flake8-implicit-str-concat
  "G", # flake8-logging-format
  "Q", # flake8-quotes
  "SLF", # flake8-self
]
fixable = ["ALL"]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
profile = "black"
