
[project]
authors = [
  {name = "zeptofine", email = "xpsychonauticonx@gmail.com"},
]
dependencies = [
  "ImageHash<5.0.0,>=4.3.1",
  "Pillow<11.0.0,>=10.0.1",
  "PySide6-Essentials<7.0.0,>=6.5.2",
  "ffmpeg-python<1.0.0,>=0.2.0",
  "imagesize<2.0.0,>=1.4.1",
  "numpy<2.0.0,>=1.26.0",
  "opencv-python<5.0.0.0,>=4.8.1.78",
  "pathvalidate<4.0.0,>=3.2.0",
  "polars<1.0.0,>=0.19.3",
  "pyarrow<14.0.0,>=13.0.0",
  "python-dateutil<3.0.0,>=2.8.2",
  "rich<14.0.0,>=13.5.3",
  "typer<1.0.0,>=0.9.0",
  "wcmatch<9.0,>=8.5",
]
description = ""
license = {text = "GPL"}
name = "imdataset-creator"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "0.1.0"

[project.scripts]
imdataset-creator = "imdataset_creator.__main__:app"
imdataset-creator-gui = "imdataset_creator.gui.__main__:main"

[tool.pdm.build]
includes = ["imdataset_creator"]

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.ruff]
extend-ignore = ["F401", "E501", "B905"]
extend-select = [
  "A",
  "ASYNC",
  "UP",
  "I",
  "B",
  "ICN",
  "F",
  "RET",
  "SIM",
  "NPY",
  "PERF",
  "RUF",
  "PIE",
  "C4",
  "E", # pycodestyle
  "W", # pycodestyle
  "FA", # flake8-future-annotations
  "ISC", # flake8-implicit-str-concat
  "G", # flake8-logging-format
  "Q", # flake8-quotes
  "SLF", # flake8-self
]
fixable = ["ALL"]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
profile = "black"
